@@ -273,6 +273,26 @@ void concrete_option_set::from_command_line(int argc,
   from_command_line(arguments);
 }
 
+// checks a multi-word option like 'no-builtin-rcfile' against a
+// possible abbreviated given option 'nbr' which is only compiled
+// of the first character of each word
+static bool
+abbrev_match(string const & option, string const & part)
+{
+  if (option.find('-') == 0)
+    return false;
+
+  string::const_iterator it = option.begin();
+  string opt_part(1, *it);
+  for (; it != option.end(); ++it)
+    {
+      if (*it == '-' && it != option.end())
+        opt_part += *(it+1);
+    }
+
+  return part == opt_part;
+}
+
 static concrete_option const &
 getopt(map<string, concrete_option> const & by_name, string & name)
 {
@@ -291,6 +311,8 @@ getopt(map<string, concrete_option> const & by_name, string & name)
   for (i = by_name.begin(); i != by_name.end(); ++i)
     {
       if (i->first.find(name) == 0)
+        candidates.push_back(i->first);
+      if (abbrev_match(i->first, name))
         candidates.push_back(i->first);
     }
 
