@@ -177,6 +177,13 @@ Xxx Xxx 99 99:99:99 UTC 2010
           be expanded; if the expansion leads to multiple possibilities,
           all matches and an accompanying short description of the
           particular expansion are displayed.
+          Two types of expansions are available: simple prefix matching
+          and word abbreviation matching. Single-word options like '--update'
+          are easier to expand from prefixes, as they're unique after a few
+          characters, in this example '--up' already matches.
+          Multi-word options like for example '--ignore-suspend-certs' might
+          collide however with single-worded ones and are best expanded from
+          abbreviations, in this case '--isc'. 
 
         - New automate command 'checkout'
 
